# sttt-experiments

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-wayland  Dockerfile.buildkit  LICENSE  Makefile.config.in  README.html  README.md  build-docker.sh  config.py.in  full-experiments.sh  mid-experiments.sh  setup-short.sh  setup-vars.sh  setup-vars.sh.in  setup.sh  short-experiments.sh
bank/: Makefile  bank.c  bank.h  bankalone.sh  bankdrio.sh  bankmonitor.vl.in  client.c  common.h  driobank.sh  experiments.sh  genmon.py  get_compare_vamos_times.sh  inputs.py  interact.c  parse_results.py  regexbank-dump.sh  regexbank.sh  run.sh
bank-tessla/: Makefile  bank.tessla  bankmon-pipe.vl  bankmonitor-gen.vl.in  bankmonitor.vl.in  compile.sh  experiments.sh  parse_results.py  regexbank-tessla-pipe.sh  regexbank.sh  run.sh  runbankinteract.sh
bank-tessla/legacy/: bankmontessla.c  spec.tessla
dataraces/: Makefile  compile.sh  experiments.sh  harness.c  monitor.cpp  monitor.h  monitor.txt  monitor.vl  randomharness.py  run.py  simpletest.c  svcomp_atomic.c
dataraces/benchmarks/: 08_rand_cas.i  25_stack.i  25_stack_longer-1.i  25_stack_longer-2.i  25_stack_longest-1.i  25_stack_longest-2.i  deterministic.txt  info.txt  sigma-s.i  sigma.i  sssc12.i  sssc12_variant.i
plots/: Makefile  README.md
plots/original-data/bank/: bank-1-1024-100000.csv  bank-1-128-100000.csv  bank-1-16-100000.csv  bank-1-2048-100000.csv  bank-1-256-100000.csv  bank-1-32-100000.csv  bank-1-4-100000.csv  bank-1-512-100000.csv  bank-1-64-100000.csv
plots/original-data/bank-tessla/: bank-1-1024-10000-ERR-10.csv  bank-1-1024-10000-ERR-100.csv  bank-1-1024-10000-ERR-1000.csv  bank-1-1024-10000-ERR-5.csv  bank-1-1024-10000.csv  bank-1-1024-100000-ERR-10.csv  bank-1-1024-100000-ERR-100.csv  bank-1-1024-100000-ERR-1000.csv  bank-1-1024-100000-ERR-5.csv  bank-1-1024-100000.csv  bank-1-128-10000-ERR-10.csv  bank-1-128-10000-ERR-100.csv  bank-1-128-10000-ERR-1000.csv  bank-1-128-10000-ERR-5.csv  bank-1-128-10000.csv  bank-1-128-100000-ERR-10.csv  bank-1-128-100000-ERR-100.csv  bank-1-128-100000-ERR-1000.csv  bank-1-128-100000-ERR-5.csv  bank-1-128-100000.csv  bank-1-16-10000-ERR-10.csv  bank-1-16-10000-ERR-100.csv  bank-1-16-10000-ERR-1000.csv  bank-1-16-10000-ERR-5.csv  bank-1-16-10000.csv  bank-1-16-100000-ERR-10.csv  bank-1-16-100000-ERR-100.csv  bank-1-16-100000-ERR-1000.csv  bank-1-16-100000-ERR-5.csv  bank-1-16-100000.csv  bank-1-2048-10000-ERR-10.csv  bank-1-2048-10000-ERR-100.csv  bank-1-2048-10000-ERR-1000.csv  bank-1-2048-10000-ERR-5.csv  bank-1-2048-10000.csv  bank-1-2048-100000-ERR-10.csv  bank-1-2048-100000-ERR-100.csv  bank-1-2048-100000-ERR-1000.csv  bank-1-2048-100000-ERR-5.csv  bank-1-2048-100000.csv  (+50 more)
plots/original-data/dataraces/: results-pure.csv  results.csv
plots/original-data/primes-tessla/: all.csv  tessla-align-8-1024-40000.csv  tessla-align-8-128-40000.csv  tessla-align-8-16-40000.csv  tessla-align-8-256-40000.csv  tessla-align-8-32-40000.csv  tessla-align-8-4-40000.csv  tessla-align-8-512-40000.csv  tessla-align-8-64-40000.csv  tessla-align-8-8-40000.csv  tessla-all.csv  tessla-alternate-8-1024-40000.csv  tessla-alternate-8-128-40000.csv  tessla-alternate-8-16-40000.csv  tessla-alternate-8-256-40000.csv  tessla-alternate-8-32-40000.csv  (+13 more)
plots/scripts/: bank-analyze.py  dataraces-analyze.ipynb  dataraces-analyze.py  numbers-plot.py  primes-plot.py  primes-process.py  primes-tessla-analyze.py  primes-tessla-merge.py  requirements.txt
primes/: Makefile  README.md  avgcsv.py  emptymonitor.c  experiments-tessla.sh  experiments.sh  gen_monitors.py  gennums_hardcoded.c  manualprimes.c  manualprimes.vl  manualprimescompile.sh  measure.py  measure2.py  monitor-primes.c  primes-2.c  primes-2.py  primes-align-tessla.txt.in  primes-align2-tessla.txt.in  primes-bad.c  primes-tessla.txt.in  primes.c  primes.java  primes.py  primes.tessla  primes.txt.in  primes_old.txt.in  run-c.py  run-cpy.py  run-java.py  run-py.py  run-tessla.sh  run.sh  run_common.py  runprimes-bad.sh  runprimes-dr-bad.sh  runprimes-dr.sh  runprimes.sh  shm_prepare_programs.py  tessla-test.sh
primes/old_times/: times-man-1-128-10000.csv  times-man-1-128-20000.csv  times-man-1-128-30000.csv  times-man-1-256-10000.csv  times-man-1-256-20000.csv  times-man-1-256-30000.csv  times-man-1-512-10000.csv  times-man-1-512-20000.csv  times-man-1-512-30000.csv  times-man-1-64-10000.csv  times-man-1-64-20000.csv  times-man-1-64-30000.csv  times-man-1-8-10000.csv  times-man-1-8-20000.csv  times-man-1-8-30000.csv  times-man-16-128-10000.csv  times-man-16-128-20000.csv  times-man-16-128-30000.csv  times-man-16-256-10000.csv  times-man-16-256-20000.csv  times-man-16-256-30000.csv  times-man-16-512-10000.csv  times-man-16-512-20000.csv  times-man-16-512-30000.csv  times-man-16-64-10000.csv  times-man-16-64-20000.csv  times-man-16-64-30000.csv  times-man-16-8-10000.csv  times-man-16-8-20000.csv  times-man-16-8-30000.csv  times-man-32-128-10000.csv  times-man-32-128-20000.csv  times-man-32-128-30000.csv  times-man-32-256-10000.csv  times-man-32-256-20000.csv  times-man-32-256-30000.csv  times-man-32-512-10000.csv  times-man-32-512-20000.csv  times-man-32-512-30000.csv  times-man-32-64-10000.csv  (+20 more)
scalability/: Makefile  README.md  benchmark.c  experiments.sh  measure.py  monitor-manual.c  monitor.txt.in  run.py  run_common.py  source.c
scripts/: run-experiments.sh  setup-full.sh  setup-mid.sh  setup-short.sh
wayland/: Makefile  README.md  events1.txt  events2.txt  events3.txt  experiments.sh  monitor-gen.c  monitor.c  monitor.c.in  monitor.cpp  monitor.cpp.in  monitor.hpp  monitor.vl  mouse-events1.txt  mouse-events2.txt  mouse-events3.txt  parse_log.py  rand_mouse.py  run-nomon.sh  run-record.sh  run.sh  touchpad-events4.txt
(+19 files in other folders)
